# mini-partner-locator

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 20250727152452_create_partner_and_countries.sql  20250727204934_add_region_to_countries.sql  20250727211211_create_partner_countries_table.sql  20250727214138_remove_city_and_country_from_partners.sql  20250730074853_require_website_url_for_partner.sql  20250730133015_add_more_countries.sql
backend/src/: main.rs
backend/src/db/: mod.rs  partner_queries.rs
backend/src/models/: countries.rs  mod.rs  partners.rs
backend/src/routes/: admin_routes.rs  country_routes.rs  mod.rs  partner_routes.rs
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: country.js  partner.js
frontend/src/components/: PageHeader.jsx  PartnerCard.jsx  PartnerFormModal.jsx  PartnersTable.jsx  PartnersTableRow.jsx
frontend/src/pages/: Admin.jsx  CountryPage.jsx  Home.jsx
